# Kasane-fork

./: .gitignore  API_REFERENCE.md  API_REFERENCE_JA.md  COMMAND_SUMMARY.md  Cargo.toml  README.md  README_JA.md  memo.md  packet_state.json  result.json  sample.json  schema.json
core/: Cargo.toml  README.md  README_JA.md  output_schema.json  result.json  schema.json
core/src/: error.rs  lib.rs  main.rs  output.rs
core/src/command/: addkey.rs  addspace.rs  create_key.rs  create_space.rs  create_user.rs  delete_value.rs  deletekey.rs  deletespace.rs  deletevalue.rs  drop_key.rs  drop_space.rs  drop_user.rs  error.rs  getvalue.rs  info_key.rs  info_space.rs  info_user.rs  insert_value.rs  keysinfo.rs  line.rs  mod.rs  patch_value.rs  putvalue.rs  select.rs  select_value.rs  setvalue.rs  show_keys.rs  show_spaces.rs  show_user.rs  show_values.rs  showkeys.rs  showspaces.rs  transaction.rs  triangle.rs  update_value.rs  version.rs
core/src/command/tools/: mod.rs  select.rs  valid_len.rs  valid_name.rs
core/src/interface/input/: json_file.rs  mod.rs
core/src/interface/output/: json_str.rs  mod.rs
core/src/io/: error.rs  full.rs  key.rs  mod.rs  output.rs  space.rs  storage.rs  wasm.rs
core/src/io/full/: addspace.rs  mod.rs
core/src/io/kv/: mod.rs  space.rs  storage.rs
core/src/io/memory/: key.rs  mod.rs  space.rs  storage.rs
core/src/io/tools/: key_bytes.rs  keytype_id.rs  mod.rs  range.rs
core/src/json/: mod.rs
core/src/json/input/: mod.rs
core/src/json/output/: mod.rs
core/src/parser/: mod.rs  parser.rs
core/src/role/: mod.rs
logic/: Cargo.toml  README.md  README_JA.md
logic/benches/: id_new.rs
logic/src/: main.rs
logic/src/id/: change_scale.rs  complement.rs  contain.rs  coordinates.rs  mod.rs  points.rs  to_pure.rs  value.rs
logic/src/set/: and.rs  equal.rs  insert.rs  mod.rs  not.rs  or.rs  xor.rs
logic/src/tests/: mod.rs  test_change_scale.rs  test_complement.rs  test_containment.rs  test_coordinates.rs  test_equality.rs  test_points.rs  test_set_operations.rs  test_spacetime_id.rs  test_spacetime_id_set.rs
tools/web/: README.md
tools/web/src/: App.css  App.jsx
tools/web/src/components/: CommandBuilder.css  CommandBuilder.jsx  CommandPanel.css  CommandPanel.jsx  JsonViewer.css  JsonViewer.jsx  LoginForm.css  LoginForm.jsx
