[package]
name = "kasane"
version = "0.0.2"
edition = "2024"

[features]
# デフォルトはネイティブ向けフル機能
default = ["full"]

# ネイティブ向けフル機能
full = ["sled", "actix-web", "tokio", "num_cpus"]

# WASM向け機能
wasm = [
    "wasm-bindgen",
    "once_cell",
    "kasane-logic/serde_support",
]

# json schemaを書き出すための機能
json_schema=["schemars"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
wasm-bindgen = { version = "0.2", optional = true }
once_cell = { version = "1.21.3", optional = true }
kasane-logic = { version = "0.0.2", features = ["serde_support"] }

# ネイティブ専用
sled = { version = "0.34.7", optional = true }
tokio = { version = "1.47.1", optional = true }
actix-web = { version = "4", optional = true }
num_cpus = { version = "1.17.0", optional = true }

# json schemaを書き出すための機能
schemars = { version = "1.0.4", optional = true }


[lib]
crate-type = ["cdylib"]
