[package]
name = "kasane"
version = "0.0.2"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
kasane-logic = { version = "0.0.5", features = ["serde_support"] }
uuid = { version="1.18.0", features = ["v4"]}
tokio = { version = "1.47.1"}
actix-web = { version = "4" }
num_cpus = { version = "1.17.0"}
lmdb = {version="0.8.0" }
schemars = { version = "1.0.4"}
argon2 = "0.5"
rand = "0.8"
